--- a/examples/benchmark.ipynb
+++ b/examples/benchmark.ipynb
@@ -20,7 +20,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['gpu', 'python']\n"
+      "['gpu', 'c', 'python']\n"
      ]
     }
    ],
@@ -35,7 +35,7 @@
    "id": "11678646-6e36-416f-aec6-39b38f1bc02f",
    "metadata": {},
    "source": [
-    "The output should be `['gpu', 'c', 'python']`. `'c'` simulator is optional and is not relevant to this benchmark. However, if it's missing, you can compile it manually by running `make -C qokit/fur/c/csim/src/` in the home directory of QOKit"
+    "The output should be `['gpu', 'c', 'python']`. `'c'` simulator is essential to this benchmark. If it's missing, you can compile it manually by running `make -C qokit/fur/c/csim/src/` in the home directory of QOKit"
    ]
   },
   {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "cc25c2a0-760d-4482-bf4d-19a0dc746def",
    "metadata": {},
    "outputs": [
@@ -80,54 +80,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "N=24\n"
+      "N=20\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/omniai/work/instance1/jupyter/py39/lib/python3.9/site-packages/numba/cuda/dispatcher.py:536: NumbaPerformanceWarning: Grid size 64 will likely result in GPU under-utilization due to low occupancy.\n",
-      "  warn(NumbaPerformanceWarning(msg))\n",
-      "/opt/omniai/work/instance1/jupyter/py39/lib/python3.9/site-packages/numba/cuda/dispatcher.py:536: NumbaPerformanceWarning: Grid size 1 will likely result in GPU under-utilization due to low occupancy.\n",
-      "  warn(NumbaPerformanceWarning(msg))\n",
-      "100%|██████████| 10/10 [00:00<00:00, 12.12it/s]\n"
+      "100%|██████████| 10/10 [00:03<00:00,  3.00it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\tLABS finished in 0.0821 on average, min: 0.0806, max: 0.0885\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10/10 [00:00<00:00, 12.87it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\tMaxCut finished in 0.0773 on average, min: 0.0759, max: 0.0836\n",
-      "N=26\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10/10 [00:03<00:00,  2.84it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\tLABS finished in 0.3509 on average, min: 0.3481, max: 0.3601\n"
+      "\tLABS finished in 0.3290 on average, min: 0.3222, max: 0.3425\n"
      ]
     },
     {
@@ -141,36 +108,65 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\tMaxCut finished in 0.3308 on average, min: 0.3289, max: 0.3393\n",
-      "N=28\n"
+      "\tMaxCut finished in 0.3266 on average, min: 0.3116, max: 0.3582\n",
+      "N=22\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:13<00:00,  1.39s/it]\n"
+      "100%|██████████| 10/10 [00:11<00:00,  1.10s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\tLABS finished in 1.3889 on average, min: 1.3856, max: 1.3953\n"
+      "\tLABS finished in 1.0984 on average, min: 1.0855, max: 1.1189\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:13<00:00,  1.31s/it]"
+      "100%|██████████| 10/10 [00:10<00:00,  1.09s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\tMaxCut finished in 1.3112 on average, min: 1.3088, max: 1.3201\n"
+      "\tMaxCut finished in 1.0919 on average, min: 1.0831, max: 1.1182\n",
+      "N=24\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:45<00:00,  4.50s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tLABS finished in 4.5025 on average, min: 4.4618, max: 4.5677\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:43<00:00,  4.38s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tMaxCut finished in 4.3782 on average, min: 4.3449, max: 4.4102\n"
      ]
     },
     {
@@ -183,7 +179,7 @@
    ],
    "source": [
     "# number of qubits\n",
-    "for N in [24, 26, 28]:\n",
+    "for N in [20, 22, 24]:\n",
     "    print(f\"N={N}\")\n",
     "    # QAOA depth\n",
     "    p = 6\n",
@@ -192,8 +188,8 @@
     "    G = nx.random_regular_graph(4, N, seed=42)\n",
     "\n",
     "    # Function initialization may not be fast\n",
-    "    f_maxcut = get_qaoa_maxcut_objective(N, p, G)\n",
-    "    f_labs = get_qaoa_labs_objective(N, p)\n",
+    "    f_maxcut = get_qaoa_maxcut_objective(N, p, G, simulator='c')\n",
+    "    f_labs = get_qaoa_labs_objective(N, p, simulator='c')\n",
     "\n",
     "    # Function evaluation is fast\n",
     "    for f, label in [(f_labs, \"LABS\"), (f_maxcut, \"MaxCut\")]:\n",
@@ -206,48 +202,6 @@
     "            times.append(end-start)\n",
     "        print(f\"\\t{label} finished in {np.mean(times):.4f} on average, min: {np.min(times):.4f}, max: {np.max(times):.4f}\")"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b5abbd11-55ee-4ba3-b685-482e90180d2e",
-   "metadata": {},
-   "source": [
-    "This is what I measured on `g4dn.2xlarge` (NVIDIA T4 GPU) as the time to evaluate `f_labs(theta)` and `f_maxcut(theta)` (commit `f6f6f565`):\n",
-    "\n",
-    "```\n",
-    "N=24\n",
-    "\tLABS finished in 0.1823 on average, min: 0.1802, max: 0.1902\n",
-    "\tMaxCut finished in 0.1676 on average, min: 0.1637, max: 0.1758\n",
-    "N=26\n",
-    "\tLABS finished in 0.8143 on average, min: 0.8102, max: 0.8229\n",
-    "\tMaxCut finished in 0.7606 on average, min: 0.7571, max: 0.7692\n",
-    "N=28\n",
-    "\tLABS finished in 3.2480 on average, min: 3.2361, max: 3.2598\n",
-    "\tMaxCut finished in 2.9858 on average, min: 2.9793, max: 2.9949\n",
-    "```\n",
-    "\n",
-    "Same benchmark on `g5.2xlarge` (NVIDIA A10G):\n",
-    "\n",
-    "```\n",
-    "N=24\n",
-    "\tLABS finished in 0.0821 on average, min: 0.0806, max: 0.0885\n",
-    "\tMaxCut finished in 0.0773 on average, min: 0.0759, max: 0.0836\n",
-    "N=26\n",
-    "\tLABS finished in 0.3509 on average, min: 0.3481, max: 0.3601\n",
-    "\tMaxCut finished in 0.3308 on average, min: 0.3289, max: 0.3393\n",
-    "N=28\n",
-    "\tLABS finished in 1.3889 on average, min: 1.3856, max: 1.3953\n",
-    "\tMaxCut finished in 1.3112 on average, min: 1.3088, max: 1.3201\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "549162cf-99c4-4473-bc01-87b616dae7bc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
