updated text in the benchmark notebook

--- a/examples/benchmark.ipynb
+++ b/examples/benchmark.ipynb
@@ -35,7 +35,7 @@
    "id": "11678646-6e36-416f-aec6-39b38f1bc02f",
    "metadata": {},
    "source": [
-    "The output should be `['gpu', 'c', 'python']`. `'c'` simulator is optional and is not relevant to this benchmark. However, if it's missing, you can compile it manually by running `make -C qokit/fur/c/csim/src/` in the home directory of QOKit"
+    "The output should be `['gpu', 'c', 'python']`. If the `'c'` simulator is missing, you can compile it manually by running `make -C qokit/fur/c/csim/src/` in the home directory of QOKit"
    ]
   },
   {
@@ -240,7 +240,7 @@
     "\tMaxCut finished in 1.3112 on average, min: 1.3088, max: 1.3201\n",
     "```\n",
     "\n",
-    "On large memory CPU nodes, you can run with more qubits. "
+    "On large memory CPU nodes, you can run with more qubits using the `'c'` simulator. "
    ]
   },
   {
