Adding tests for Sk.

--- a/examples/benchmark.ipynb
+++ b/examples/benchmark.ipynb
@@ -12,15 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "d9a6d070-3524-4fe8-af23-c295751d7145",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['gpu', 'python']\n"
+      "['c', 'python']\n"
      ]
     }
    ],
@@ -40,9 +42,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "6d84f2d6-68f2-481c-b1ba-6fcc87b6984e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -51,7 +55,20 @@
     "import timeit \n",
     "from qokit.qaoa_objective_labs import get_qaoa_labs_objective\n",
     "from qokit.qaoa_objective_maxcut import get_qaoa_maxcut_objective\n",
+    "from qokit.qaoa_objective_sk import get_qaoa_sk_objective\n",
     "from qokit.qaoa_objective import get_qaoa_objective"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b9452455-9fce-4082-8ce6-5ba5ee921d59",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from qokit.utils import precompute_energies"
    ]
   },
   {
@@ -72,105 +89,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "cc25c2a0-760d-4482-bf4d-19a0dc746def",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "N=24\n"
+      "N=8\n",
+      "-11.969406178348745 2.406151532752335\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/omniai/work/instance1/jupyter/py39/lib/python3.9/site-packages/numba/cuda/dispatcher.py:536: NumbaPerformanceWarning: Grid size 64 will likely result in GPU under-utilization due to low occupancy.\n",
-      "  warn(NumbaPerformanceWarning(msg))\n",
-      "/opt/omniai/work/instance1/jupyter/py39/lib/python3.9/site-packages/numba/cuda/dispatcher.py:536: NumbaPerformanceWarning: Grid size 1 will likely result in GPU under-utilization due to low occupancy.\n",
-      "  warn(NumbaPerformanceWarning(msg))\n",
-      "100%|██████████| 10/10 [00:00<00:00, 12.12it/s]\n"
+      "100%|██████████| 10/10 [00:00<00:00, 2966.27it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\tLABS finished in 0.0821 on average, min: 0.0806, max: 0.0885\n"
+      "\tLABS finished in 0.0003 on average, min: 0.0003, max: 0.0005\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:00<00:00, 12.87it/s]\n"
+      "100%|██████████| 10/10 [00:00<00:00, 3140.15it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\tMaxCut finished in 0.0773 on average, min: 0.0759, max: 0.0836\n",
-      "N=26\n"
+      "\tMaxCut finished in 0.0003 on average, min: 0.0003, max: 0.0003\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:03<00:00,  2.84it/s]\n"
+      "100%|██████████| 10/10 [00:00<00:00, 109.51it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\tLABS finished in 0.3509 on average, min: 0.3481, max: 0.3601\n"
+      "\tSK finished in 0.0003 on average, min: 0.0003, max: 0.0003\n",
+      "N=10\n",
+      "-13.475884400721835 4.7254963985222815\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:03<00:00,  3.02it/s]\n"
+      "100%|██████████| 10/10 [00:00<00:00, 1117.91it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\tMaxCut finished in 0.3308 on average, min: 0.3289, max: 0.3393\n",
-      "N=28\n"
+      "\tLABS finished in 0.0009 on average, min: 0.0006, max: 0.0026\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:13<00:00,  1.39s/it]\n"
+      "\n",
+      "100%|██████████| 10/10 [00:00<00:00, 100.25it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\tLABS finished in 1.3889 on average, min: 1.3856, max: 1.3953\n"
+      "\tMaxCut finished in 0.0099 on average, min: 0.0007, max: 0.0915\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:13<00:00,  1.31s/it]"
+      "100%|██████████| 10/10 [00:00<00:00, 100.95it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\tMaxCut finished in 1.3112 on average, min: 1.3088, max: 1.3201\n"
+      "\tSK finished in 0.0099 on average, min: 0.0007, max: 0.0910\n",
+      "N=12\n",
+      "-23.068234664673355 8.352977140900474\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:00<00:00, 882.29it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tLABS finished in 0.0011 on average, min: 0.0008, max: 0.0035\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:00<00:00, 95.48it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tMaxCut finished in 0.0104 on average, min: 0.0008, max: 0.0908\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:00<00:00, 107.87it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tSK finished in 0.0092 on average, min: 0.0008, max: 0.0831\n"
      ]
     },
     {
@@ -183,20 +244,28 @@
    ],
    "source": [
     "# number of qubits\n",
-    "for N in [24, 26, 28]:\n",
+    "for N in [8, 10, 12]:\n",
     "    print(f\"N={N}\")\n",
     "    # QAOA depth\n",
     "    p = 6\n",
     "\n",
     "    theta = np.random.uniform(0,1,2*p)\n",
-    "    G = nx.random_regular_graph(4, N, seed=42)\n",
+    "    G = nx.complete_graph(N) #, seed=42)\n",
+    "    J = np.random.randn(N, N)\n",
+    "    J = (J + J.T)/2\n",
+    "\n",
+    "    for edge in G.edges:\n",
+    "        G.edges[edge[0], edge[1]]['weight'] = 1 #J[edge[0], edge[1]]\n",
     "\n",
     "    # Function initialization may not be fast\n",
     "    f_maxcut = get_qaoa_maxcut_objective(N, p, G)\n",
+    "    f_sk = get_qaoa_sk_objective(N, p, G)\n",
     "    f_labs = get_qaoa_labs_objective(N, p)\n",
+    "    \n",
+    "    print(f_maxcut(theta), f_sk(theta))\n",
     "\n",
     "    # Function evaluation is fast\n",
-    "    for f, label in [(f_labs, \"LABS\"), (f_maxcut, \"MaxCut\")]:\n",
+    "    for f, label in [(f_labs, \"LABS\"), (f_maxcut, \"MaxCut\"), (f_sk, \"SK\")]:\n",
     "        f(theta) # do not count the first evaluation\n",
     "        times = []\n",
     "        for _ in tqdm(range(10)):\n",
@@ -304,9 +373,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py39",
+   "display_name": "qiskit2",
    "language": "python",
-   "name": "py39"
+   "name": "qiskit2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -318,7 +387,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
