1. Changing passing of Jij instead of Graph for SK model. 2. Adding more tests.

--- a/examples/benchmark.ipynb
+++ b/examples/benchmark.ipynb
@@ -369,6 +369,112 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5dab942f-a10d-47a6-945a-6fecf4cc1c39",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "20b4c487-bb71-43a8-b3f9-804a4a49e89d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "n=3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "737995df-a47e-4e9e-9c9c-180b1e1adcaa",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "x = np.random.randn(n, n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "477a724b-35ab-4a2e-aad5-d1417f263be0",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.48929965,  0.24325887, -0.08034045],\n",
+       "       [-1.05869945, -0.6424519 , -1.92976591],\n",
+       "       [-0.98251804,  0.43707901, -0.51245069]])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "22ee0822-d86e-4c89-a4a3-75e8fdc4873c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "np.fill_diagonal(x, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "e60e4990-840c-45e0-96e5-dc37bae49cf3",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.        ,  0.24325887, -0.08034045],\n",
+       "       [-1.05869945,  1.        , -1.92976591],\n",
+       "       [-0.98251804,  0.43707901,  1.        ]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29c08409-b63e-406a-8422-577a76ef714f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
