--- a/examples/QAOA_LABS_optimization.ipynb
+++ b/examples/QAOA_LABS_optimization.ipynb
@@ -250,9 +250,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py39",
+   "display_name": "qiskit2",
    "language": "python",
-   "name": "py39"
+   "name": "qiskit2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -264,7 +264,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
