Fixing normalization of parameters and adding tests.

--- a/examples/advanced/compare_maxcut_parameters.ipynb
+++ b/examples/advanced/compare_maxcut_parameters.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "9b3cead5-3b8c-4d2c-841c-50a0938b1101",
    "metadata": {
     "tags": []
@@ -59,41 +59,41 @@
      "output_type": "stream",
      "text": [
       "QAOA Approximation Ratio at p = 1\n",
-      "Fixed: 0.7808446107491328\n",
-      "SK: 0.781031578805189\n",
+      "Fixed: 0.7808446107491323\n",
+      "SK: 0.7810315788051893\n",
       "QAOA Approximation Ratio at p = 2\n",
-      "Fixed: 0.8415702609691469\n",
-      "SK: 0.8427446925306482\n",
+      "Fixed: 0.841570260969146\n",
+      "SK: 0.8427446925306488\n",
       "QAOA Approximation Ratio at p = 3\n",
-      "Fixed: 0.8768876771219176\n",
-      "SK: 0.8755786913102142\n",
+      "Fixed: 0.8768876771219162\n",
+      "SK: 0.875578691310214\n",
       "QAOA Approximation Ratio at p = 4\n",
-      "Fixed: 0.9029594859012219\n",
-      "SK: 0.8992106234291581\n",
+      "Fixed: 0.9029594859012207\n",
+      "SK: 0.8992106234291585\n",
       "QAOA Approximation Ratio at p = 5\n",
-      "SK: 0.9154819493746231\n",
+      "SK: 0.9154819493746226\n",
       "QAOA Approximation Ratio at p = 6\n",
-      "SK: 0.9270687431908355\n",
+      "SK: 0.9270687431908347\n",
       "QAOA Approximation Ratio at p = 7\n",
-      "SK: 0.9355272070467487\n",
+      "SK: 0.9355272070467485\n",
       "QAOA Approximation Ratio at p = 8\n",
-      "SK: 0.9413177374481372\n",
+      "SK: 0.9413177374481357\n",
       "QAOA Approximation Ratio at p = 9\n",
-      "SK: 0.9461590286316571\n",
+      "SK: 0.9461590286316589\n",
       "QAOA Approximation Ratio at p = 10\n",
-      "SK: 0.949992581286514\n",
+      "SK: 0.9499925812865131\n",
       "QAOA Approximation Ratio at p = 11\n",
-      "SK: 0.9529675051633483\n",
+      "SK: 0.9529675051633477\n",
       "QAOA Approximation Ratio at p = 12\n",
-      "SK: 0.9554558137531627\n",
+      "SK: 0.9554558137531638\n",
       "QAOA Approximation Ratio at p = 13\n",
-      "SK: 0.9575383013726638\n",
+      "SK: 0.9575383013726615\n",
       "QAOA Approximation Ratio at p = 14\n",
-      "SK: 0.9596475529911418\n",
+      "SK: 0.9596475529911428\n",
       "QAOA Approximation Ratio at p = 15\n",
-      "SK: 0.9616197361942117\n",
+      "SK: 0.9616197361942131\n",
       "QAOA Approximation Ratio at p = 16\n",
-      "SK: 0.9634798263787637\n"
+      "SK: 0.9634798263787635\n"
      ]
     }
    ],
@@ -120,7 +120,7 @@
     "        pass\n",
     "    try:\n",
     "        gamma, beta = get_sk_gamma_beta(p)\n",
-    "        print(f'SK: {-f(gamma / np.sqrt(d), beta) / optimal_cut}')\n",
+    "        print(f'SK: {-f(2 * gamma / np.sqrt(d), beta) / optimal_cut}')\n",
     "    except ValueError:\n",
     "        # skip if parameters not available\n",
     "        pass"
