Removing unused functions from parameter_utils.

--- a/examples/QAOA_iterative_interpolation_SK.ipynb
+++ b/examples/QAOA_iterative_interpolation_SK.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "id": "79919c7a-d733-4b85-9263-9643a09e7c0f",
    "metadata": {
     "tags": []
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "id": "1eaecff5-8ac3-4335-bf39-a23e5390028b",
    "metadata": {
     "tags": []
@@ -27,19 +27,22 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import pandas as pd\n",
     "from itertools import combinations\n",
     "import scipy\n",
     "import qokit\n",
     "from qokit import get_qaoa_objective\n",
-    "from qokit.parameter_utils import parallel_execution, initialize_csv, generate_p_values, interpolation_basis, fine_tune_result, save_result, log_walltime\n",
+    "from qokit.parameter_utils import to_basis, from_basis\n",
     "from contextlib import contextmanager\n",
     "import time\n",
-    "from typing import Optional, Tuple, Callable"
+    "from typing import Optional, Tuple, Callable\n",
+    "from joblib import Parallel, delayed\n",
+    "import nlopt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "id": "16fe9c91-0e87-47e7-a759-f4dd38b680e5",
    "metadata": {
     "tags": []
@@ -55,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "id": "72eb6720-65c3-4135-89fa-340d1ab5878a",
    "metadata": {
     "tags": []
@@ -71,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "id": "225bce41-0787-477b-9cae-58f06a426091",
    "metadata": {
     "tags": []
@@ -89,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "id": "cc55af8d-6ce9-4ee0-a983-ef52741bdd3e",
    "metadata": {
     "tags": []
@@ -109,7 +112,191 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
+   "id": "92093906-9996-4dcb-9d92-c794db1ba4b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def initialize_gpu(gpu_id):\n",
+    "    os.environ[\"CUDA_VISIBLE_DEVICES\"] = str(gpu_id)\n",
+    "\n",
+    "\n",
+    "def func_with_gpu_id(func):\n",
+    "    def wrapper(*args, gpu_id, **kwargs):\n",
+    "        initialize_gpu(gpu_id)\n",
+    "        return func(*args, **kwargs)\n",
+    "\n",
+    "    return wrapper\n",
+    "\n",
+    "\n",
+    "def parallel_execution(func, inputs, num_gpus):\n",
+    "    func_for_gpu = func_with_gpu_id(func)\n",
+    "    jobs = [delayed(func_for_gpu)(*given_input, gpu_id=i % num_gpus) for i, given_input in enumerate(inputs)]\n",
+    "    results = Parallel(n_jobs=num_gpus, backend=\"loky\")(jobs)\n",
+    "    return results\n",
+    "\n",
+    "def initialize_csv(filename: str):\n",
+    "    columns = [\"N\", \"p\", \"num_coeffs\", \"gamma\", \"beta\", \"basis\", \"u\", \"v\", \"optimizer\", \"approx_ratio\", \"merit\", \"overlap\", \"evaluations\"]\n",
+    "    df = pd.DataFrame(columns=columns)\n",
+    "    df.to_csv(filename, index=False)\n",
+    "\n",
+    "def generate_p_values(p0: int, pmax: int, step: int) -> np.ndarray:\n",
+    "    if step > p0:\n",
+    "        return np.concatenate(([p0], np.arange(step, pmax + 1, step, dtype=int)))\n",
+    "    return np.arange(p0, pmax + 1, step, dtype=int)\n",
+    "\n",
+    "def fine_tune_result(f_overlap, f, gs_energy, N, p, num_coeffs, gamma, beta, basis, optimizer=\"bobyqa\", rhobeg=None, maxiter=1000, max_energy=0):\n",
+    "    res, res_gamma, res_beta = fine_tune_coeffs(\n",
+    "        f_overlap, f, gs_energy, N, p, num_coeffs, gamma, beta, basis, optimizer=optimizer, rhobeg=rhobeg, maxiter=maxiter, max_energy=max_energy\n",
+    "    )\n",
+    "    u, v = res[\"x\"][:num_coeffs], res[\"x\"][num_coeffs:]\n",
+    "\n",
+    "    minus_approx_ratio = res[\"fun\"]\n",
+    "    approx_ratio = -1.0 * minus_approx_ratio\n",
+    "    merit = max_energy - approx_ratio * (max_energy - gs_energy)\n",
+    "    overlap = 1 - f_overlap(np.hstack([res_gamma, res_beta]))\n",
+    "\n",
+    "    nfev = res[\"nfev\"]\n",
+    "    result = {\n",
+    "        \"N\": N,\n",
+    "        \"p\": p,\n",
+    "        \"num_coeffs\": num_coeffs,\n",
+    "        \"gamma\": res_gamma,\n",
+    "        \"beta\": res_beta,\n",
+    "        \"basis\": basis,\n",
+    "        \"u\": u,\n",
+    "        \"v\": v,\n",
+    "        \"optimizer\": optimizer,\n",
+    "        \"approx_ratio\": approx_ratio,\n",
+    "        \"merit\": merit,\n",
+    "        \"overlap\": overlap,\n",
+    "        \"evaluations\": nfev,\n",
+    "    }\n",
+    "    return result\n",
+    "\n",
+    "def fine_tune_coeffs(f_overlap, f, gs_energy, N, p, num_coeffs, gamma, beta, basis, optimizer=\"bobyqa\", rhobeg=None, maxiter=1000, max_energy=0):\n",
+    "    if rhobeg is None:\n",
+    "        rhobeg = 0.01 / N\n",
+    "    print(f\"Optimizing with optimizer={optimizer} for N={N}, p={p}, num_coeffs = {num_coeffs} in {basis} basis\")\n",
+    "    u, v = to_basis(gamma, beta, num_coeffs, basis)\n",
+    "    initial_pt = np.hstack([u[:num_coeffs], v[:num_coeffs]])\n",
+    "\n",
+    "    def func(ins):\n",
+    "        u[:num_coeffs] = ins[:num_coeffs]\n",
+    "        v[:num_coeffs] = ins[num_coeffs:]\n",
+    "        gamma, beta = from_basis(u, v, p, basis)\n",
+    "        merit = f(np.hstack([gamma, beta]))  # this value of obj is negative\n",
+    "        approx_ratio = (max_energy - merit) / (max_energy - gs_energy)\n",
+    "        minus_approx_ratio = -1.0 * approx_ratio\n",
+    "        return minus_approx_ratio\n",
+    "\n",
+    "    if optimizer == \"bobyqa\":\n",
+    "        res = optimize_bobyqa(func, initial_pt, rhobeg=rhobeg, tol=1e-6, maxiter=maxiter)\n",
+    "    elif optimizer == \"cobyla\":\n",
+    "        res = scipy.optimize.minimize(func, initial_pt, method=\"COBYLA\", options={\"rhobeg\": rhobeg, \"tol\": 1e-6, \"maxiter\": maxiter})\n",
+    "    elif optimizer == \"diff_evo\":\n",
+    "        # Here maxiter are the number of generations so there number must be set by total function evals\n",
+    "        # The maximum number of function evaluations (with no polishing) is: (generations + 1) * popsize * 2 * num_coeffs\n",
+    "        # default popsize is 15\n",
+    "        # Note that bound is not strict since it does take into account polishing\n",
+    "        popsize = 15\n",
+    "        generations = maxiter // (popsize * 2 * num_coeffs) - 1\n",
+    "        bounds = [(-0.5, 0.5)] * (2 * num_coeffs)\n",
+    "        res = scipy.optimize.differential_evolution(func, bounds=bounds, maxiter=generations, popsize=popsize)\n",
+    "    elif optimizer == \"dual_anneal\":\n",
+    "        # Here maxfun are the number of evaluations so there number must be set by total function evals\n",
+    "        # Note that bound is not strict since it does take into account that\n",
+    "        # optimization cannot be stopped during a local search\n",
+    "        bounds = [(-0.5, 0.5)] * (2 * num_coeffs)\n",
+    "        res = scipy.optimize.dual_annealing(func, bounds=bounds, maxfun=maxiter)\n",
+    "\n",
+    "    print(res)\n",
+    "    res_gamma, res_beta = from_basis(u, v, p, basis)\n",
+    "    return res, res_gamma, res_beta\n",
+    "\n",
+    "def optimize_bobyqa(func, params, rhobeg=None, tol=None, maxiter=3000):\n",
+    "    def wrapped_func(x, grad):\n",
+    "        if grad.size > 0:\n",
+    "            grad[:] = np.zeros_like(x)\n",
+    "        return func(x)\n",
+    "\n",
+    "    opt = nlopt.opt(nlopt.LN_BOBYQA, len(params))\n",
+    "\n",
+    "    if rhobeg is not None:\n",
+    "        opt.set_initial_step(rhobeg)\n",
+    "    if tol is not None:\n",
+    "        opt.set_ftol_rel(tol)\n",
+    "    if maxiter is not None:\n",
+    "        opt.set_maxeval(maxiter)\n",
+    "\n",
+    "    opt.set_min_objective(wrapped_func)\n",
+    "\n",
+    "    lower_bounds = np.full(len(params), -10)\n",
+    "    upper_bounds = np.full(len(params), 10)\n",
+    "\n",
+    "    opt.set_lower_bounds(lower_bounds)\n",
+    "    opt.set_upper_bounds(upper_bounds)\n",
+    "\n",
+    "    optimized_params = opt.optimize(params)\n",
+    "    minf = opt.last_optimum_value()\n",
+    "    nfev = opt.get_numevals()\n",
+    "    result_code = opt.last_optimize_result()\n",
+    "\n",
+    "    if result_code == 1:\n",
+    "        message = \"Optimization terminated successfully.\"\n",
+    "        success = \"True\"\n",
+    "    if result_code == 3:\n",
+    "        message = \"Optimization stopped because ftol was reached.\"\n",
+    "        success = \"True\"\n",
+    "    elif result_code == 5:\n",
+    "        message = \"Maximum number of function evaluations has been exceeded.\"\n",
+    "        success = \"False\"\n",
+    "\n",
+    "    res = {\n",
+    "        \"message\": message,\n",
+    "        \"success\": success,\n",
+    "        \"status\": result_code,\n",
+    "        \"fun\": minf,\n",
+    "        \"x\": optimized_params,\n",
+    "        \"nfev\": nfev,\n",
+    "        \"maxcv\": 0.0,\n",
+    "    }\n",
+    "    return res\n",
+    "\n",
+    "def interpolation_basis(gamma, beta, p, num_coeffs, basis):\n",
+    "    \"\"\"Interpolate gamma, beta to the p value using the\n",
+    "    given basis\n",
+    "    ----------\n",
+    "    gamma : list-like\n",
+    "    beta : list-like\n",
+    "    p : int\n",
+    "    num_coeffs : int\n",
+    "    basis : string\n",
+    "    Returns\n",
+    "    -------\n",
+    "    gamma, beta : np.array\n",
+    "        QAOA parameters in standard parameterization\n",
+    "    \"\"\"\n",
+    "    u, v = to_basis(gamma, beta, num_coeffs, basis)\n",
+    "    gamma, beta = from_basis(u, v, p, basis)\n",
+    "    return gamma, beta\n",
+    "\n",
+    "def save_result(result, filename):\n",
+    "    df = pd.DataFrame([result])\n",
+    "    np.set_printoptions(threshold=sys.maxsize)  # outputs with length > 1000 are also printed in full\n",
+    "    df.to_csv(filename, mode=\"a\", header=False, index=False)\n",
+    "\n",
+    "def log_walltime(start_time: float):\n",
+    "    walltime_seconds = time.time() - start_time\n",
+    "    walltime_hours = int(walltime_seconds // 3600)\n",
+    "    walltime_minutes = (walltime_seconds % 3600) / 60\n",
+    "    print(f\"Walltime: {walltime_hours} hrs and {walltime_minutes:.2f} minutes\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "id": "31da1a27-e475-4c10-be46-68b5acd57ecf",
    "metadata": {
     "tags": []
@@ -201,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "id": "8b819efc-06fa-48eb-9736-e2198c314d35",
    "metadata": {
     "tags": []
@@ -218,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "id": "5cd10ed8-b059-42f0-8f27-d11d13ee31ec",
    "metadata": {
     "tags": []
@@ -231,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 38,
    "id": "c2d44fec-cf64-4dd7-89f1-75891973ab40",
    "metadata": {
     "tags": []
@@ -267,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "id": "4ee716e3-1096-47aa-8b37-09017757ee66",
    "metadata": {
     "tags": []
@@ -291,16 +478,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "id": "36af0cfb-9bec-4c1d-bf6a-835e23bdabfe",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "if __name__ == \"__main__\":    \n",
-    "    N = 6\n",
-    "    main(N)"
+    "N = 6\n",
+    "main(N)"
    ]
   }
  ],
