--- a/examples/QAOA_iterative_interpolation_SK.ipynb
+++ b/examples/QAOA_iterative_interpolation_SK.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "id": "79919c7a-d733-4b85-9263-9643a09e7c0f",
    "metadata": {
     "tags": []
@@ -19,7 +19,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
+   "id": "a6d2a067-9722-48aa-9a2a-21f4033c47d3",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Looking in indexes: https://artifacts-read.gkp.jpmchase.net/artifactory/api/pypi/pypi/simple\n",
+      "Requirement already satisfied: nlopt in /home/jpmcnobody/conda/miniconda3/lib/python3.8/site-packages (2.7.1)\n",
+      "Requirement already satisfied: joblib in /home/jpmcnobody/conda/miniconda3/lib/python3.8/site-packages (1.4.2)\n",
+      "Requirement already satisfied: numpy>=1.14 in /home/jpmcnobody/conda/miniconda3/lib/python3.8/site-packages (from nlopt) (1.24.4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install nlopt joblib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "1eaecff5-8ac3-4335-bf39-a23e5390028b",
    "metadata": {
     "tags": []
@@ -42,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "id": "16fe9c91-0e87-47e7-a759-f4dd38b680e5",
    "metadata": {
     "tags": []
@@ -58,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "id": "72eb6720-65c3-4135-89fa-340d1ab5878a",
    "metadata": {
     "tags": []
@@ -74,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "id": "225bce41-0787-477b-9cae-58f06a426091",
    "metadata": {
     "tags": []
@@ -92,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "id": "cc55af8d-6ce9-4ee0-a983-ef52741bdd3e",
    "metadata": {
     "tags": []
@@ -112,9 +135,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "id": "92093906-9996-4dcb-9d92-c794db1ba4b4",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def func_with_gpu_id(func):\n",
@@ -273,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "id": "31da1a27-e475-4c10-be46-68b5acd57ecf",
    "metadata": {
     "tags": []
@@ -366,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "id": "8b819efc-06fa-48eb-9736-e2198c314d35",
    "metadata": {
     "tags": []
@@ -383,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "id": "5cd10ed8-b059-42f0-8f27-d11d13ee31ec",
    "metadata": {
     "tags": []
@@ -396,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "id": "c2d44fec-cf64-4dd7-89f1-75891973ab40",
    "metadata": {
     "tags": []
@@ -432,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "id": "4ee716e3-1096-47aa-8b37-09017757ee66",
    "metadata": {
     "tags": []
@@ -456,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "id": "36af0cfb-9bec-4c1d-bf6a-835e23bdabfe",
    "metadata": {
     "tags": []
@@ -466,13 +491,21 @@
     "N = 6\n",
     "main(N)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46dc4f14-6a6a-44c5-9ca1-81f1f728e6b6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "qiskit2",
+   "display_name": "test_ii_pr",
    "language": "python",
-   "name": "qiskit2"
+   "name": "test_ii_pr"
   },
   "language_info": {
    "codemirror_mode": {
