--- a/examples/QAOA_iterative_interpolation_SK.ipynb
+++ b/examples/QAOA_iterative_interpolation_SK.ipynb
@@ -76,7 +76,7 @@
     "GAMMA_START = 0.0\n",
     "GAMMA_END = 0.1\n",
     "BETA_START = -0.1\n",
-    "BETA_END = 0.0\n"
+    "BETA_END = 0.0"
    ]
   },
   {
@@ -147,7 +147,6 @@
     "        os.environ[\"CUDA_VISIBLE_DEVICES\"] = str(gpu_id)\n",
     "        return func(*args, **kwargs)\n",
     "    return wrapper\n",
-    "\n",
     "\n",
     "def parallel_execution(func, inputs, num_gpus):\n",
     "    func_for_gpu = func_with_gpu_id(func)\n",
@@ -292,8 +291,7 @@
     "    walltime_seconds = time.time() - start_time\n",
     "    walltime_hours = int(walltime_seconds // 3600)\n",
     "    walltime_minutes = (walltime_seconds % 3600) / 60\n",
-    "    print(f\"Walltime: {walltime_hours} hrs and {walltime_minutes:.2f} minutes\")\n",
-    "\n"
+    "    print(f\"Walltime: {walltime_hours} hrs and {walltime_minutes:.2f} minutes\")\n"
    ]
   },
   {
@@ -464,32 +462,19 @@
    },
    "outputs": [],
    "source": [
-    "def main(N):\n",
-    "    base_seed = 0\n",
-    "    num_trials = 5\n",
-    "    pmax = 100\n",
-    "    step = 5\n",
-    "    optimizer = 'bobyqa'\n",
-    "    num_gpus = 4\n",
-    "    dir_name = f\"ii_results/SK_N{N}\"\n",
-    "    os.makedirs(dir_name, exist_ok=True)\n",
-    "    \n",
-    "    inputs = [(N, trial, base_seed, pmax, step, optimizer, dir_name) for trial in range(num_trials)]\n",
-    "    \n",
-    "    results = parallel_execution(run_trial, inputs, num_gpus)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "36af0cfb-9bec-4c1d-bf6a-835e23bdabfe",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
     "N = 6\n",
-    "main(N)"
+    "base_seed = 0\n",
+    "num_trials = 5\n",
+    "pmax = 100\n",
+    "step = 5\n",
+    "optimizer = 'bobyqa'\n",
+    "num_gpus = 4\n",
+    "dir_name = f\"ii_results/SK_N{N}\"\n",
+    "os.makedirs(dir_name, exist_ok=True)\n",
+    "\n",
+    "inputs = [(N, trial, base_seed, pmax, step, optimizer, dir_name) for trial in range(num_trials)]\n",
+    "\n",
+    "results = parallel_execution(run_trial, inputs, num_gpus)"
    ]
   },
   {
