--- a/examples/QAOA_iterative_interpolation_SK.ipynb
+++ b/examples/QAOA_iterative_interpolation_SK.ipynb
@@ -14,7 +14,16 @@
     "# Get the parent directory\n",
     "parent_dir = os.getcwd()\n",
     "# Add the parent directory to sys.path\n",
-    "sys.path.append(parent_dir)"
+    "sys.path.append(parent_dir)\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from itertools import combinations\n",
+    "import scipy\n",
+    "import qokit\n",
+    "from qokit import get_qaoa_objective\n",
+    "from qokit.parameter_utils import to_basis, from_basis\n",
+    "from typing import Optional, Tuple, Callable"
    ]
   },
   {
@@ -49,16 +58,6 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "from itertools import combinations\n",
-    "import scipy\n",
-    "import qokit\n",
-    "from qokit import get_qaoa_objective\n",
-    "from qokit.parameter_utils import to_basis, from_basis\n",
-    "from contextlib import contextmanager\n",
-    "import time\n",
-    "from typing import Optional, Tuple, Callable\n",
     "from joblib import Parallel, delayed\n",
     "import nlopt"
    ]
@@ -76,18 +75,8 @@
     "GAMMA_START = 0.0\n",
     "GAMMA_END = 0.1\n",
     "BETA_START = -0.1\n",
-    "BETA_END = 0.0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "72eb6720-65c3-4135-89fa-340d1ab5878a",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
+    "BETA_END = 0.0\n",
+    "\n",
     "# Constants\n",
     "max_evals = 40000\n",
     "ratio_threshold = 0.98\n",
@@ -97,46 +86,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "225bce41-0787-477b-9cae-58f06a426091",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "def initialize_parameters(gamma: Optional[np.ndarray], beta: Optional[np.ndarray], p: int) -> Tuple[np.ndarray, np.ndarray]:\n",
-    "    if gamma is None and beta is None:\n",
-    "        gamma = np.linspace(GAMMA_START, GAMMA_END, p)\n",
-    "        beta = np.linspace(BETA_START, BETA_END, p)\n",
-    "    elif gamma is not None and beta is not None:\n",
-    "        assert len(gamma) == len(beta)\n",
-    "    return gamma, beta"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "cc55af8d-6ce9-4ee0-a983-ef52741bdd3e",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "@contextmanager\n",
-    "def suppress_stdout():\n",
-    "    with open(os.devnull, 'w') as devnull:\n",
-    "        old_stdout = sys.stdout\n",
-    "        sys.stdout = devnull\n",
-    "        try:\n",
-    "            yield\n",
-    "        finally:\n",
-    "            sys.stdout = old_stdout"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "92093906-9996-4dcb-9d92-c794db1ba4b4",
    "metadata": {
     "tags": []
    },
@@ -163,6 +114,78 @@
     "    if step > p0:\n",
     "        return np.concatenate(([p0], np.arange(step, pmax + 1, step, dtype=int)))\n",
     "    return np.arange(p0, pmax + 1, step, dtype=int)\n",
+    "    \n",
+    "def save_result(result, filename):\n",
+    "    df = pd.DataFrame([result])\n",
+    "    np.set_printoptions(threshold=sys.maxsize)  # outputs with length > 1000 are also printed in full\n",
+    "    df.to_csv(filename, mode=\"a\", header=False, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "92093906-9996-4dcb-9d92-c794db1ba4b4",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def initialize_parameters(gamma: Optional[np.ndarray], beta: Optional[np.ndarray], p: int) -> Tuple[np.ndarray, np.ndarray]:\n",
+    "    if gamma is None and beta is None:\n",
+    "        gamma = np.linspace(GAMMA_START, GAMMA_END, p)\n",
+    "        beta = np.linspace(BETA_START, BETA_END, p)\n",
+    "    elif gamma is not None and beta is not None:\n",
+    "        assert len(gamma) == len(beta)\n",
+    "    return gamma, beta\n",
+    "\n",
+    "def optimize_bobyqa(func, params, rhobeg=None, tol=None, maxiter=3000):\n",
+    "    def wrapped_func(x, grad):\n",
+    "        if grad.size > 0:\n",
+    "            grad[:] = np.zeros_like(x)\n",
+    "        return func(x)\n",
+    "\n",
+    "    opt = nlopt.opt(nlopt.LN_BOBYQA, len(params))\n",
+    "\n",
+    "    if rhobeg is not None:\n",
+    "        opt.set_initial_step(rhobeg)\n",
+    "    if tol is not None:\n",
+    "        opt.set_ftol_rel(tol)\n",
+    "    if maxiter is not None:\n",
+    "        opt.set_maxeval(maxiter)\n",
+    "\n",
+    "    opt.set_min_objective(wrapped_func)\n",
+    "\n",
+    "    lower_bounds = np.full(len(params), -10)\n",
+    "    upper_bounds = np.full(len(params), 10)\n",
+    "\n",
+    "    opt.set_lower_bounds(lower_bounds)\n",
+    "    opt.set_upper_bounds(upper_bounds)\n",
+    "\n",
+    "    optimized_params = opt.optimize(params)\n",
+    "    minf = opt.last_optimum_value()\n",
+    "    nfev = opt.get_numevals()\n",
+    "    result_code = opt.last_optimize_result()\n",
+    "\n",
+    "    if result_code == 1:\n",
+    "        message = \"Optimization terminated successfully.\"\n",
+    "        success = \"True\"\n",
+    "    if result_code == 3:\n",
+    "        message = \"Optimization stopped because ftol was reached.\"\n",
+    "        success = \"True\"\n",
+    "    elif result_code == 5:\n",
+    "        message = \"Maximum number of function evaluations has been exceeded.\"\n",
+    "        success = \"False\"\n",
+    "\n",
+    "    res = {\n",
+    "        \"message\": message,\n",
+    "        \"success\": success,\n",
+    "        \"status\": result_code,\n",
+    "        \"fun\": minf,\n",
+    "        \"x\": optimized_params,\n",
+    "        \"nfev\": nfev,\n",
+    "        \"maxcv\": 0.0,\n",
+    "    }\n",
+    "    return res\n",
     "\n",
     "def fine_tune_result(f_overlap, f, gs_energy, N, p, num_coeffs, gamma, beta, basis, optimizer=\"bobyqa\", rhobeg=None, maxiter=1000, max_energy=0):\n",
     "    res, res_gamma, res_beta = fine_tune_coeffs(\n",
@@ -231,72 +254,12 @@
     "\n",
     "    print(res)\n",
     "    res_gamma, res_beta = from_basis(u, v, p, basis)\n",
-    "    return res, res_gamma, res_beta\n",
-    "\n",
-    "def optimize_bobyqa(func, params, rhobeg=None, tol=None, maxiter=3000):\n",
-    "    def wrapped_func(x, grad):\n",
-    "        if grad.size > 0:\n",
-    "            grad[:] = np.zeros_like(x)\n",
-    "        return func(x)\n",
-    "\n",
-    "    opt = nlopt.opt(nlopt.LN_BOBYQA, len(params))\n",
-    "\n",
-    "    if rhobeg is not None:\n",
-    "        opt.set_initial_step(rhobeg)\n",
-    "    if tol is not None:\n",
-    "        opt.set_ftol_rel(tol)\n",
-    "    if maxiter is not None:\n",
-    "        opt.set_maxeval(maxiter)\n",
-    "\n",
-    "    opt.set_min_objective(wrapped_func)\n",
-    "\n",
-    "    lower_bounds = np.full(len(params), -10)\n",
-    "    upper_bounds = np.full(len(params), 10)\n",
-    "\n",
-    "    opt.set_lower_bounds(lower_bounds)\n",
-    "    opt.set_upper_bounds(upper_bounds)\n",
-    "\n",
-    "    optimized_params = opt.optimize(params)\n",
-    "    minf = opt.last_optimum_value()\n",
-    "    nfev = opt.get_numevals()\n",
-    "    result_code = opt.last_optimize_result()\n",
-    "\n",
-    "    if result_code == 1:\n",
-    "        message = \"Optimization terminated successfully.\"\n",
-    "        success = \"True\"\n",
-    "    if result_code == 3:\n",
-    "        message = \"Optimization stopped because ftol was reached.\"\n",
-    "        success = \"True\"\n",
-    "    elif result_code == 5:\n",
-    "        message = \"Maximum number of function evaluations has been exceeded.\"\n",
-    "        success = \"False\"\n",
-    "\n",
-    "    res = {\n",
-    "        \"message\": message,\n",
-    "        \"success\": success,\n",
-    "        \"status\": result_code,\n",
-    "        \"fun\": minf,\n",
-    "        \"x\": optimized_params,\n",
-    "        \"nfev\": nfev,\n",
-    "        \"maxcv\": 0.0,\n",
-    "    }\n",
-    "    return res\n",
-    "\n",
-    "def save_result(result, filename):\n",
-    "    df = pd.DataFrame([result])\n",
-    "    np.set_printoptions(threshold=sys.maxsize)  # outputs with length > 1000 are also printed in full\n",
-    "    df.to_csv(filename, mode=\"a\", header=False, index=False)\n",
-    "\n",
-    "def log_walltime(start_time: float):\n",
-    "    walltime_seconds = time.time() - start_time\n",
-    "    walltime_hours = int(walltime_seconds // 3600)\n",
-    "    walltime_minutes = (walltime_seconds % 3600) / 60\n",
-    "    print(f\"Walltime: {walltime_hours} hrs and {walltime_minutes:.2f} minutes\")\n"
+    "    return res, res_gamma, res_beta"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "31da1a27-e475-4c10-be46-68b5acd57ecf",
    "metadata": {
     "tags": []
@@ -325,7 +288,6 @@
     "    ratio_threshold: float = 0.98,\n",
     "    rhobeg: float = 0.01\n",
     ") -> dict:\n",
-    "    start_time = time.time()\n",
     "    total_eval = 0\n",
     "    \n",
     "    if filename is None:\n",
@@ -382,15 +344,14 @@
     "\n",
     "        prev_approx_ratio = approx_ratio\n",
     "\n",
-    "    log_walltime(start_time)\n",
     "    print(f\"Total evaluations: {total_eval}\")\n",
     "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "8b819efc-06fa-48eb-9736-e2198c314d35",
+   "execution_count": 8,
+   "id": "c2d44fec-cf64-4dd7-89f1-75891973ab40",
    "metadata": {
     "tags": []
    },
@@ -401,61 +362,37 @@
     "    sim = simclass(N, terms=terms)\n",
     "    sorted_diag = np.sort(sim.get_cost_diagonal())\n",
     "    gs = sorted_diag[0]\n",
-    "    return gs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "5cd10ed8-b059-42f0-8f27-d11d13ee31ec",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "def createList(r1, r2):\n",
-    "    return [item for item in range(r1, r2+1)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "c2d44fec-cf64-4dd7-89f1-75891973ab40",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "def run_trial(N, trial, base_seed, pmax, step, optimizer, dir_name):\n",
-    "    with suppress_stdout():\n",
-    "        seed = base_seed + trial\n",
-    "        np.random.seed(seed)\n",
-    "        terms = [(np.random.normal(), spin_pair) for spin_pair in combinations(range(N), r=2)]\n",
-    "        \n",
-    "        f_overlap = get_qaoa_objective(N, terms=terms, objective=\"overlap\")\n",
-    "        f = get_qaoa_objective(N, terms=terms, objective=\"expectation\")\n",
-    "        \n",
-    "        gs_energy = gs(N, terms)\n",
-    "        \n",
-    "        filename = os.path.join(dir_name, f\"II_N_{N}_SK_results_seed_{seed}_pmax_{pmax}_step_{step}_optimizer_{optimizer}.csv\")\n",
+    "    return gs\n",
     "\n",
-    "        result = II_schedule(\n",
-    "            f_overlap=f_overlap,\n",
-    "            f=f,\n",
-    "            gs_energy=gs_energy,\n",
-    "            N=N,\n",
-    "            pmax=pmax,\n",
-    "            step=step,\n",
-    "            save=True,\n",
-    "            filename=filename,\n",
-    "            p0=5,\n",
-    "            overlap_conv=True\n",
-    "        )"
+    "def run_trial(N, trial, base_seed, pmax, step, optimizer, dir_name):\n",
+    "    seed = base_seed + trial\n",
+    "    np.random.seed(seed)\n",
+    "    terms = [(np.random.normal(), spin_pair) for spin_pair in combinations(range(N), r=2)]\n",
+    "\n",
+    "    f_overlap = get_qaoa_objective(N, terms=terms, objective=\"overlap\")\n",
+    "    f = get_qaoa_objective(N, terms=terms, objective=\"expectation\")\n",
+    "\n",
+    "    gs_energy = gs(N, terms)\n",
+    "\n",
+    "    filename = os.path.join(dir_name, f\"II_N_{N}_SK_results_seed_{seed}_pmax_{pmax}_step_{step}_optimizer_{optimizer}.csv\")\n",
+    "\n",
+    "    result = II_schedule(\n",
+    "        f_overlap=f_overlap,\n",
+    "        f=f,\n",
+    "        gs_energy=gs_energy,\n",
+    "        N=N,\n",
+    "        pmax=pmax,\n",
+    "        step=step,\n",
+    "        save=True,\n",
+    "        filename=filename,\n",
+    "        p0=5,\n",
+    "        overlap_conv=True\n",
+    "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "4ee716e3-1096-47aa-8b37-09017757ee66",
    "metadata": {
     "tags": []
@@ -471,16 +408,23 @@
     "num_gpus = 4\n",
     "dir_name = f\"ii_results/SK_N{N}\"\n",
     "os.makedirs(dir_name, exist_ok=True)\n",
-    "\n",
-    "inputs = [(N, trial, base_seed, pmax, step, optimizer, dir_name) for trial in range(num_trials)]\n",
-    "\n",
+    "inputs = [(N, trial, base_seed, pmax, step, optimizer, dir_name) for trial in range(num_trials)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "46dc4f14-6a6a-44c5-9ca1-81f1f728e6b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "results = parallel_execution(run_trial, inputs, num_gpus)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46dc4f14-6a6a-44c5-9ca1-81f1f728e6b6",
+   "id": "415a9c8f-b245-4e8e-9f1b-5fa7016b1e9c",
    "metadata": {},
    "outputs": [],
    "source": []
